--- a/public/stylesheets/Source/index.scss
+++ b/public/stylesheets/Source/index.scss
@@ -1,14 +1,14 @@
 .outerWrapper
 {
 	/*background-image: url('../images/together.jpg');*/
-	background-image: url('../images/cancun.jpg');
+	/*background-image: url('../images/cancun.jpg');*/
 
-	/*background-image: url('../images/lights.png');
+	background-image: url('../images/lights.png');
 
 	.backgroundOverlay
 	{
 		background-color: rgba(49, 48, 48, .35);
-	}*/
+	}
 }
 
 .home
