--- a/public/stylesheets/Source/wedding.scss
+++ b/public/stylesheets/Source/wedding.scss
@@ -1,5 +1,6 @@
 .outerWrapper
 {
 	/*background-image: url('../images/selfie.jpg');*/
-	background-image: url('../images/holding-hands.jpg');
+	/*background-image: url('../images/holding-hands.jpg');*/
+	background-image: url('../images/cancun.jpg');
 }
