Minor text fix to home screen

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,7 +17,7 @@ block content
 						div.clock(style="margin:2em;")
 						div
 							center
-								h1.ido Until we say "I DO"
+								h1 Until "I DO"
 			//- div.clockContainer
 			//- 	div.row
 			//- 		div.col-lg-6.col-lg-offset-3.col-md-8.col-md-offset-2.col-sm-12.col-xs-12
