--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 
 
-		title Herald and Joanne | #{title}
+		title H + J | #{title}
 		
 		link(type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300")
 		link(type="text/css" rel="stylesheet" href="//fonts.googleapis.com/css?family=Josefin+Sans:400,100,300,400i,600,700,700i|Lato:400,100,300,400i,700,700i,900")
