--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -6967,7 +6967,8 @@ From: http://www.dafont.com/reditum.font
 html, body {
   height: 100%;
   margin: 0;
-  font-family: 'Josefin Sans', Helvetica, sans-serif; }
+  font-family: 'Josefin Sans', Helvetica, sans-serif;
+  font-size: 20px; }
 
 body {
   color: white;
