Add new page for #HJSayIDo

--- a/public/stylesheets/Source/variables.scss
+++ b/public/stylesheets/Source/variables.scss
@@ -1,20 +1,2 @@
-﻿// Colours
-$primaryFont: #fff;
-$ammGreen: #fff;
-$blueLight: #0066a3;
-$blueLighter: #0075bd;
-$hspGreen: #0f5634;
-$hspGreenLight: #136d42;
-$hspGreenLighter: #1eae69;
-$red: #e74c3c;
-$redLight: #ea6557;
-$redDark: #d52c1a;
-$greyDark: #999;
-
-// Header
-$headerHeight: 140px;
-$headerHeightMobile: 175px;
-
-// Footer
-$footerHeight: 175px;
-$footerFontSize: 10px;
+﻿$headerHeight: 85px;
+$headerSpacing: 20px;
