--- a/public/stylesheets/Source/index.scss
+++ b/public/stylesheets/Source/index.scss
@@ -1,3 +1,5 @@
+@import "variables.scss"; 
+
 .outerWrapper
 {
 	/*background-image: url('../images/together.jpg');*/
@@ -8,6 +10,22 @@
 	.backgroundOverlay
 	{
 		background-color: rgba(49, 48, 48, .35);
+	}
+}
+
+.innerWrapper
+{
+	padding-bottom: 0;
+	padding-top: ($headerHeight + $headerSpacing);
+	margin-top: -($headerHeight + $headerSpacing);
+
+	min-height: 100%;
+	height: 100%;
+
+	.container 
+	{
+		height: 100%;
+		max-height: 100%;
 	}
 }
 
