--- a/public/stylesheets/Source/styles.scss
+++ b/public/stylesheets/Source/styles.scss
@@ -4,9 +4,6 @@
 @import "variables.scss"; 
 @import "fonts.scss"; 
 
-$headerHeight: 85px;
-$headerSpacing: 20px;
-
 html, body
 {
 	height: 100%;
@@ -18,7 +15,6 @@ html, body
 body
 {
 	color: white;
-	/*color: rgba(247, 247, 247, 0.65);*/
 }
 
 .mobile-navigation 
@@ -41,6 +37,7 @@ body
 	width: 100%;
 	height: 100%;
 	z-index: 1;
+	overflow-y: scroll;
 
 	.backgroundOverlay
 	{
@@ -48,6 +45,7 @@ body
 		width: 100%;
 		height: 100%;
 		position: absolute;
+		
 		top: 0;
 		left: 0;
 		right: 0;
@@ -100,7 +98,7 @@ header
 		{
 			li 
 			{
-				font-size: 30px;
+				font-size: 25px;
 				display: inline-block;
 			}
 		}
@@ -139,14 +137,7 @@ a:hover, li.active a {
 
 .innerWrapper
 {
-	height: 100%;
-	margin-top: -($headerHeight + $headerSpacing);
-	padding-top: ($headerHeight + $headerSpacing);
-
-	.container 
-	{
-		height: 100%;
-	}
+	padding-bottom: ($headerHeight + $headerSpacing);
 }
 
 
