--- a/public/stylesheets/Source/wedding.scss
+++ b/public/stylesheets/Source/wedding.scss
@@ -2,5 +2,5 @@
 {
 	/*background-image: url('../images/selfie.jpg');*/
 	/*background-image: url('../images/holding-hands.jpg');*/
-	background-image: url('../images/cancun.jpg');
+	background-image: url('../images/cancun.png');
 }
