--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -5,6 +5,16 @@
   .outerWrapper .backgroundOverlay {
     background-color: rgba(49, 48, 48, 0.35); }
 
+.innerWrapper {
+  padding-bottom: 0;
+  padding-top: 105px;
+  margin-top: -105px;
+  min-height: 100%;
+  height: 100%; }
+  .innerWrapper .container {
+    height: 100%;
+    max-height: 100%; }
+
 .home {
   position: relative;
   top: 25%; }
