--- a/public/stylesheets/wedding.css
+++ b/public/stylesheets/wedding.css
@@ -1,4 +1,4 @@
 .outerWrapper {
   /*background-image: url('../images/selfie.jpg');*/
   /*background-image: url('../images/holding-hands.jpg');*/
-  background-image: url("../images/cancun.jpg"); }
+  background-image: url("../images/cancun.png"); }
