--- a/public/stylesheets/Source/hjsayido.scss
+++ b/public/stylesheets/Source/hjsayido.scss
@@ -11,12 +11,7 @@
 	margin: 5px;
 }
 
-h1
-{
-	font-size: 24px;
-}
-
-.brideAndGroom, .guests
+.instgram-container
 {
 	padding-top: 20px;
 
@@ -25,6 +20,17 @@ h1
 		font-size: 30px;
 		margin: 0;
 	}
+
+	h2
+	{
+		font-size: 20px;
+		margin: 0;
+	}
+}
+
+.guests
+{
+	padding-top: 40px;
 }
 
 /* Small devices (tablets, 768px and down) */
