--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,8 +25,6 @@ html
 
 	body(ng-app='app' ng-controller='mainController as Main')
 		div.outerWrapper
-			//- div.backgroundOverlay
-
 			header
 				div.container
 					div.row
@@ -35,7 +33,7 @@ html
 								center
 									div#mobile-navigation-label(ng-click='Main.mobileMenuClick()')
 										span MENU
-									ul(ng-show='Main.showMobile')
+									ul(ng-class='{ "mobile-navigation-open": Main.showMobile }')
 										li <a href="/">Home</a>
 										li <a href="/Wedding">Wedding</a>
 										li <a href="/Wedding-Social">Social</a>
