--- a/public/stylesheets/Source/styles.scss
+++ b/public/stylesheets/Source/styles.scss
@@ -22,7 +22,7 @@ body
 	display: none;
 	position: absolute;
 	top: 0;
-	background-color: black;
+	background-color: $mobileBackgroundColour;
 	width: 100%;
 	overflow: hidden;
 	margin-top: -20px;
@@ -49,7 +49,6 @@ body
 
 		li
 		{
-			background-color: black;
 			padding: 1em 0 0;
 
 			a 
