--- a/public/stylesheets/Source/wedding.scss
+++ b/public/stylesheets/Source/wedding.scss
@@ -1,4 +1,4 @@
-.outerWrapper
+body
 {
 	/*background-image: url('../images/selfie.jpg');*/
 	/*background-image: url('../images/holding-hands.jpg');*/
