--- a/public/stylesheets/Source/styles.scss
+++ b/public/stylesheets/Source/styles.scss
@@ -7,6 +7,7 @@
 html, body
 {
 	height: 100%;
+	width: 100%;
 	margin: 0;
 	font-family: 'Josefin Sans', Helvetica, sans-serif;
 	font-size: 20px;
@@ -15,57 +16,11 @@ html, body
 body
 {
 	color: white;
-}
-
-.mobile-navigation 
-{
-	display: none;
-	position: absolute;
-	top: 0;
-	background-color: $mobileBackgroundColour;
-	width: 100%;
-	overflow: hidden;
-	margin-top: -20px;
-	margin-left: -15px;
-	padding-top: 20px;
-	z-index: 999;
-
-	#mobile-navigation-label
-	{
-		width: 100%;
-		line-height: 1.5em;
-		letter-spacing: .4em;
-		padding-bottom: 10px;
-	}
-
-	ul 
-	{
-		height: 0;
-
-		&.mobile-navigation-open
-		{
-			height: $mobileHeaderHeight;
-		}
-
-		li
-		{
-			padding: 1em 0 0;
-
-			a 
-			{
-				display: inline-block;
-			}
-		}
-	}
-}
-
-.outerWrapper
-{
 	background-color: black;
 
 	background-size: cover;
 	background-position: center center;
-	background-attachment: scroll;
+	background-attachment: fixed;
 	background-repeat: no-repeat;
 
 	position: absolute;
@@ -75,20 +30,6 @@ body
 	height: 100%;
 	z-index: 1;
 	overflow-y: scroll;
-
-	.backgroundOverlay
-	{
-		background-color: rgba(0, 0, 0, 0.75);
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		z-index: -1;
-	}
 }
 
 header 
@@ -97,12 +38,17 @@ header
 	margin-top: 20px;
 	height: $headerHeight;
 
+	#mobile-navigation-label
+	{
+		display: none;
+	}
+
 	nav
 	{
 		position: relative;
 		top: 0;
 		left: auto;
-		width: 90%;
+		width: 100%;
 		margin: 0 auto;
 
 		font-family: 'Josefin Sans';
@@ -116,6 +62,8 @@ header
 
 			li 
 			{
+				display: inline-block;
+
 				font-weight: 300;
 				font-style: normal;
 				line-height: 1.5em;
@@ -125,29 +73,6 @@ header
 
 				padding: 1em 1em 0;
 				margin: 0;
-			}
-		}
-	}
-
-	nav.main-navigation
-	{
-		ul 
-		{
-			li 
-			{
-				font-size: 25px;
-				display: inline-block;
-			}
-		}
-	}
-
-	nav.mobile-navigation
-	{
-		ul 
-		{
-			li 
-			{
-				font-size: 20px;
 			}
 		}
 	}
@@ -173,14 +98,55 @@ a:hover, li.active a {
 /* Small devices (tablets, 768px and down) */
 @media (max-width: $screen-sm-min)
 {
-	.main-navigation 
+	header 
 	{
-		display: none;
-	}
 
-	.mobile-navigation 
-	{
-		display: block;
+		#mobile-navigation-label
+		{
+			display: inline-block;
+			width: 100%;
+			line-height: 1.5em;
+			letter-spacing: .4em;
+			padding-bottom: 10px;
+		}
+
+		.container
+		{
+			padding: 0;
+		}
+
+		nav
+		{
+			display: block;
+			background-color: $mobileBackgroundColour;
+			width: 100%;
+			overflow: hidden;
+			margin-top: -20px;
+			padding-top: 20px;
+			z-index: 999;
+
+			ul 
+			{
+				height: 0;
+
+				&.mobile-navigation-open
+				{
+					height: $mobileHeaderHeight;
+				}
+
+				li 
+				{
+					display: block;
+					width: 100%;
+					font-size: 20px;
+
+					a 
+					{
+						display: inline-block;
+					}
+				}
+			}
+		}
 	}
 
 	.clock
