--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,9 +1,7 @@
-.outerWrapper {
+body {
   /*background-image: url('../images/together.jpg');*/
   /*background-image: url('../images/cancun.jpg');*/
   background-image: url("../images/lights.png"); }
-  .outerWrapper .backgroundOverlay {
-    background-color: rgba(49, 48, 48, 0.35); }
 
 .innerWrapper {
   padding-bottom: 0;
@@ -16,6 +14,7 @@
     max-height: 100%; }
 
 .home {
+  text-align: center;
   position: relative;
   top: 25%; }
 
@@ -23,3 +22,8 @@
   color: white !important;
   font-size: 20px;
   right: -100px !important; }
+
+.flip-clock-wrapper {
+  margin: 0 auto !important;
+  max-width: 550px;
+  margin-top: 2em; }
