--- a/public/stylesheets/Source/hjsayido.scss
+++ b/public/stylesheets/Source/hjsayido.scss
@@ -8,7 +8,7 @@ body
 	display: inline-block;
 	width: 200px;
 	height: 200px;
-	margin: 5px;
+	padding: 5px;
 }
 
 .instgram-container
@@ -36,9 +36,25 @@ body
 /* Small devices (tablets, 768px and down) */
 @media (max-width: 768px)
 {
+	.instgram-container
+	{
+		text-align: center;
+
+		h1 
+		{
+			font-size: 24px;
+		}
+
+		h2
+		{
+			font-size: 20px;
+		}
+	}
+
 	.instgram-image, img 
 	{
-		width: 150px;
-		height: 150px;
+		width: 110px;
+		height: 110px;
+		padding: 3px;
 	}
 }
