--- a/public/stylesheets/hjsayido.css
+++ b/public/stylesheets/hjsayido.css
@@ -5,7 +5,7 @@ body {
   display: inline-block;
   width: 200px;
   height: 200px;
-  margin: 5px; }
+  padding: 5px; }
 
 .instgram-container {
   padding-top: 20px; }
@@ -21,6 +21,14 @@ body {
 
 /* Small devices (tablets, 768px and down) */
 @media (max-width: 768px) {
+  .instgram-container {
+    text-align: center; }
+    .instgram-container h1 {
+      font-size: 24px; }
+    .instgram-container h2 {
+      font-size: 20px; }
+
   .instgram-image, img {
-    width: 150px;
-    height: 150px; } }
+    width: 110px;
+    height: 110px;
+    padding: 3px; } }
