Layout - sliding mobile menu

--- a/public/stylesheets/Source/index.scss
+++ b/public/stylesheets/Source/index.scss
@@ -8,7 +8,7 @@ body
 	background-image: url('../images/lights.png');
 }
 
-.innerWrapper
+.content
 {
 	padding-bottom: 0;
 	padding-top: ($headerHeight + $headerSpacing);
