--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -3,13 +3,13 @@ body {
   /*background-image: url('../images/cancun.jpg');*/
   background-image: url("../images/lights.png"); }
 
-.innerWrapper {
+.content {
   padding-bottom: 0;
   padding-top: 105px;
   margin-top: -105px;
   min-height: 100%;
   height: 100%; }
-  .innerWrapper .container {
+  .content .container {
     height: 100%;
     max-height: 100%; }
 
