--- a/views/wedding-social.jade
+++ b/views/wedding-social.jade
@@ -4,3 +4,54 @@ block styles
 	link(rel='stylesheet', href='/stylesheets/wedding-social.css')
 
 block content
+	div.row
+		div.col-sm-12.center
+			h1 Wedding Social
+	div.row
+		div.col-sm-12.center
+			p 
+				span Punjab Cultural Centre
+				span 1770 King Edward St. Winnipeg, MB
+				span Saturday November 4, 2017 at 8:00pm - 1:00am
+	br
+	div.row
+		div.col-sm-12
+			p Join us in celebrating as we, Herald and Joanne, will be getting married! Come out for an evening filled with all of your favourite Filipino dishes, drinks, awesome prizes!
+			p For all of you basketball players, there will be a basketball hoop to test your skill. How many can you score in 60 seconds?
+
+			h2.center Tickets
+			p Interested in coming? Regular tickets are $10. Can't make it but still want to support? We also have support tickets for $10.
+			p For tickets feel free to text Herald or Joanne. Tickets can also be purchased from members of our wonderful wedding party, family, and close friends:
+			div.col-xs-offset-2
+				ul.col-md-4
+					li Alvin Albay
+					li Archie Ballesteros
+					li Benn Javate
+					li Christian Lozano
+					li Christine Capucion
+					li Gayle Baybay
+					li Harvey Gutierrez
+					li Herschel Gutierrez
+				ul.col-md-4
+					li Jekko Axalan
+					li Jessica Axalan					
+					li Jezel Axalan
+					li John Raven 
+					li Jon Gutierrez
+					li Joyce Axalan
+					li Katrina Galapon
+					li Mark Capucion
+				ul.col-md-4
+					li Marlon Axalan
+					li Mary Katherine Ballesteros
+					li Monica Axalan
+					li Nadine Maranan
+					li Raymond Dabu
+					li Rhegie Axalan
+					li Shannon Maranan
+					li Sherlyn Watson
+					li Zeeron Maranan
+			h2.center For those who have already purchased tickets, thank you so much for your love and support!
+
+			br
+			h2.center Prizes: To Be Announced...
