--- a/public/stylesheets/Source/styles.scss
+++ b/public/stylesheets/Source/styles.scss
@@ -91,7 +91,43 @@ a:hover, li.active a {
 
 .content
 {
-	padding-bottom: ($headerHeight + $headerSpacing);
+	padding-bottom: 25px;
+
+	h1 
+	{
+		margin-bottom: 20px;
+		text-transform: capitalize;
+	}
+
+	h2
+	{
+		text-transform: capitalize;
+	}
+
+	p 
+	{
+		margin-top: 20px;
+
+		span 
+		{
+			display: block;
+		}
+	}
+}
+
+.uppercase 
+{
+	text-transform: uppercase;
+}
+
+.center
+{
+	text-align: center;
+}
+
+.right
+{
+	text-align: right;
 }
 
 
@@ -132,7 +168,6 @@ a:hover, li.active a {
 			ul 
 			{
 				display: none;
-				/*height: 0;*/
 
 				&.mobile-navigation-open
 				{
@@ -162,6 +197,6 @@ a:hover, li.active a {
 
 	.content
 	{
-		margin-top: -($headerSpacing * 2);
+		margin-top: -$headerSpacing;
 	}
 }
