--- a/public/stylesheets/hjsayido.css
+++ b/public/stylesheets/hjsayido.css
@@ -1,34 +1,31 @@
 body {
   background-image: url("../images/together.png"); }
 
-.instgram-image, img {
+.instgram-container h1 {
+  font-size: 30px;
+  margin: 0; }
+.instgram-container h2 {
+  font-size: 20px;
+  margin: 0; }
+.instgram-container .instgram-image, .instgram-container img {
   display: inline-block;
   width: 200px;
   height: 200px;
   padding: 5px; }
-
-.instgram-container {
-  padding-top: 20px; }
-  .instgram-container h1 {
-    font-size: 30px;
-    margin: 0; }
-  .instgram-container h2 {
-    font-size: 20px;
-    margin: 0; }
 
 .guests {
   padding-top: 40px; }
 
 /* Small devices (tablets, 768px and down) */
 @media (max-width: 768px) {
+  h1 {
+    font-size: 24px; }
+
   .instgram-container {
     text-align: center; }
-    .instgram-container h1 {
-      font-size: 24px; }
     .instgram-container h2 {
       font-size: 20px; }
-
-  .instgram-image, img {
-    width: 110px;
-    height: 110px;
-    padding: 3px; } }
+    .instgram-container .instgram-image, .instgram-container img {
+      width: 110px;
+      height: 110px;
+      padding: 3px; } }
