--- a/public/stylesheets/Source/styles.scss
+++ b/public/stylesheets/Source/styles.scss
@@ -18,10 +18,14 @@ body
 	color: white;
 	background-color: black;
 
-	background-size: cover;
 	background-position: center center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
+	
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 
 	position: absolute;
 	min-height: 100%;
