--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -6974,10 +6974,13 @@ html, body {
 body {
   color: white;
   background-color: black;
-  background-size: cover;
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   position: absolute;
   min-height: 100%;
   min-width: 100%;
