--- a/views/wedding-social.jade
+++ b/views/wedding-social.jade
@@ -15,14 +15,14 @@ block content
 				span Saturday November 4, 2017 at 8:00pm - 1:00am
 	br
 	div.row
-		div.col-sm-12
+		div.col-sm-8.col-sm-offset-2
 			p Join us in celebrating as we, Herald and Joanne, will be getting married! Come out for an evening filled with all of your favourite Filipino dishes, drinks, awesome prizes!
 			p For all of you basketball players, there will be a basketball hoop to test your skill. How many can you score in 60 seconds?
 
 			h2.center Tickets
 			p Interested in coming? Regular tickets are $10. Can't make it but still want to support? We also have support tickets for $10.
 			p For tickets feel free to text Herald or Joanne. Tickets can also be purchased from members of our wonderful wedding party, family, and close friends:
-			div.col-xs-offset-2
+			div.col-xs-offset-1
 				ul.col-md-4
 					li Alvin Albay
 					li Archie Ballesteros
@@ -43,7 +43,7 @@ block content
 					li Mark Capucion
 				ul.col-md-4
 					li Marlon Axalan
-					li Mary Katherine Ballesteros
+					li Mary Ballesteros
 					li Monica Axalan
 					li Nadine Maranan
 					li Raymond Dabu
