--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -4,10 +4,9 @@ block styles
 	link(rel='stylesheet', href='/stylesheets/wedding.css')
 
 block scripts
-	//- script(type="text/javascript" src="/scripts/test.js")
 	script(type="text/javascript" src="/scripts/Controllers/instagram.js")
 
 block content
-	//- div#instafeed
-	//- div(ng-controller='instagramController as IG')
-	//- 	pre {{ IG.data }}
+	div.row
+		div.col-sm-12.center
+			h1 Wedding
