--- a/public/stylesheets/Source/styles.scss
+++ b/public/stylesheets/Source/styles.scss
@@ -21,7 +21,7 @@ body
 	background-position: center center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	
+
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -57,7 +57,7 @@ header
 
 		font-family: 'Josefin Sans';
 		text-transform: uppercase;
-		font-size: 20px;
+		font-size: 25px;
 
 		ul 
 		{
@@ -99,13 +99,24 @@ a:hover, li.active a {
 
 	h1 
 	{
+		text-transform: uppercase;
 		margin-bottom: 20px;
-		text-transform: capitalize;
+
+		span
+		{
+			font-size: 50px;
+		}
 	}
 
 	h2
 	{
-		text-transform: capitalize;
+		text-transform: uppercase;
+		padding-top: 20px;
+
+		span
+		{
+			font-size: 50px;
+		}
 	}
 
 	p 
@@ -115,6 +126,21 @@ a:hover, li.active a {
 		span 
 		{
 			display: block;
+		}
+	}
+
+	ul
+	{
+		padding-bottom: 10px;
+	}
+
+	.subheading
+	{
+		text-transform: uppercase;
+
+		span
+		{
+			font-size: 50px;
 		}
 	}
 }
