--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,6 @@ block styles
 block scripts
 	script(type="text/javascript" src="/scripts/Libs/flipclock.min.js")
 	script(type="text/javascript" src="/scripts/Controllers/home-controller.js")
-	//- script(type="text/javascript" src="/scripts/countdown.js")
 
 block content
 	div.home(ng-controller='homeController as Home')
@@ -15,6 +14,5 @@ block content
 			div.col-sm-12
 				h1 {{ Home.weddingDate | ddMMyyyy }}
 				br
-				div.clock(style="margin:2em;")
-				div
-					h1 Until "I DO"
+				div.clock
+				h1 <span>U</span>ntil <span>"I DO"</span>
