--- a/views/wedding-social.jade
+++ b/views/wedding-social.jade
@@ -6,7 +6,7 @@ block styles
 block content
 	div.row
 		div.col-sm-12.center
-			h1 Wedding Social
+			h1 <span>W</span>edding <span>S</span>ocial
 	div.row
 		div.col-sm-12.center
 			p 
@@ -17,9 +17,9 @@ block content
 	div.row
 		div.col-sm-8.col-sm-offset-2
 			p Join us in celebrating as we, Herald and Joanne, will be getting married! Come out for an evening filled with all of your favourite Filipino dishes, drinks, awesome prizes!
-			p For all of you basketball players, there will be a basketball hoop to test your skill. How many can you score in 60 seconds?
+			p For all of you basketball players, there will be a basketball hoop to test your shooting. Can you shoot the most in 60 seconds to claim the prize?
 
-			h2.center Tickets
+			h2.subheading.center <span>T</span>ickets
 			p Interested in coming? Regular tickets are $10. Can't make it but still want to support? We also have support tickets for $10.
 			p For tickets feel free to text Herald or Joanne. Tickets can also be purchased from members of our wonderful wedding party, family, and close friends:
 			div.col-xs-offset-1
@@ -51,7 +51,14 @@ block content
 					li Shannon Maranan
 					li Sherlyn Watson
 					li Zeeron Maranan
-			h2.center For those who have already purchased tickets, thank you so much for your love and support!
+			h3.thank-you.center For those who have already purchased tickets, thank you so much for your love and support!
 
-			br
-			h2.center Prizes: To Be Announced...
+			h2.subheading.center <span>D</span>ress <span>U</span>p!
+			p Our wedding social will be Halloween themed! Buy or hand-make the best halloween costume you can to be the best dressed at the social. We're giving awards for:
+			div.col-xs-offset-1
+				ul.col-md-12
+					li The Best Dressed Male
+					li The Best Dressed Female
+					li The Best Dressed Couple
+
+			h2.subheading.center <span>P</span>rizes: to be <span>A</span>nnounced...
