--- a/public/stylesheets/Source/index.scss
+++ b/public/stylesheets/Source/index.scss
@@ -5,7 +5,7 @@ body
 	/*background-image: url('../images/together.jpg');*/
 	/*background-image: url('../images/cancun.jpg');*/
 
-	background-image: url('../images/lights.png');
+	background-image: url('../images/lights.jpg');
 }
 
 .content
@@ -42,4 +42,13 @@ body
 	margin: 0 auto !important;
 	max-width: 550px;
 	margin-top: 2em;
+}
+
+/* Small devices (tablets, 768px and down) */
+@media (max-width: 768px)
+{
+	body
+	{
+		background-image: url('../images/lights-mobile.jpg');
+	}
 }
