--- a/public/stylesheets/hjsayido.css
+++ b/public/stylesheets/hjsayido.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/together.png"); }
+  background-image: url("../images/together.jpg"); }
 
 .instgram-container h1 {
   font-size: 30px;
@@ -18,6 +18,9 @@ body {
 
 /* Small devices (tablets, 768px and down) */
 @media (max-width: 768px) {
+  body {
+    background-image: url("../images/together-mobile.jpg"); }
+
   h1 {
     font-size: 24px; }
 
