--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,7 +1,7 @@
 body {
   /*background-image: url('../images/together.jpg');*/
   /*background-image: url('../images/cancun.jpg');*/
-  background-image: url("../images/lights.jpg"); }
+  background-image: url("../images/lights.png"); }
 
 .content {
   padding-bottom: 0;
