--- a/public/stylesheets/Source/index.scss
+++ b/public/stylesheets/Source/index.scss
@@ -5,7 +5,7 @@ body
 	/*background-image: url('../images/together.jpg');*/
 	/*background-image: url('../images/cancun.jpg');*/
 
-	background-image: url('../images/lights.jpg');
+	background-image: url('../images/lights.png');
 }
 
 .content
