--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -7060,6 +7060,9 @@ a:hover, li.active a {
 
 /* Small devices (tablets, 768px and down) */
 @media (max-width: 768px) {
+  body {
+    background-attachment: scroll; }
+
   header #mobile-navigation-label {
     display: inline-block;
     width: 100%;
