--- a/public/stylesheets/wedding.css
+++ b/public/stylesheets/wedding.css
@@ -3,6 +3,15 @@ body {
   /*background-image: url('../images/holding-hands.jpg');*/
   background-image: url("../images/cancun.jpg"); }
 
+.content ul {
+  margin: 0;
+  padding: 0; }
+  .content ul li {
+    list-style-type: none; }
+
+.brideAndGroom {
+  font-size: 30px; }
+
 /* Small devices (tablets, 768px and down) */
 @media (max-width: 768px) {
   body {
