--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -7,6 +7,100 @@ block scripts
 	script(type="text/javascript" src="/scripts/Controllers/instagram.js")
 
 block content
+	//- div.row
+	//- 	div.col-sm-12.center
+	//- 		h1 <span>W</span>edding
 	div.row
-		div.col-sm-12.center
-			h1 <span>W</span>edding
+		div.col-sm-8.col-sm-offset-2
+			div.center
+				h1 <span>B</span>ride and <span>G</span>room
+				p.brideAndGroom Herald Gutierrez and Joanne Rutaquio
+
+				div.row
+					div.col-md-6
+						h3 <span>B</span>est <span>M</span>en
+						ul
+							li Harvey Gutierrez
+							li Herschel Gutierrez
+					div.col-md-6
+						h3 <span>M</span>atron of <span>H</span>onour
+						ul
+							li Mary Katherine Ballesteros
+
+				div.row
+					div.col-md-6
+						h3 <span>G</span>roomsmen
+						ul
+							li Archie Ballesteros
+							li Jekko Axalan
+							li Mark Capucion
+							li &nbsp;
+							li Bennet Javate
+							li Marlon Axalan
+							li Alvin Albay
+							li Christian James Lozano
+							li Raymond Dabu
+					div.col-md-6
+						h3 <span>B</span>ridesmaids
+						ul
+							li Christine Capucion
+							li Katrina Galapon
+							li Jessica Axalan
+							li &nbsp;
+							li Sherlyn Watson
+							li Shannon Maranan
+							li Joyce Axalan
+							li Monica Axalan
+							li MaryNadine Maranan
+
+				div.row
+					div.col-md-6
+						h3 <span>J</span>unior <span>G</span>roomsmens
+						ul
+							li Zeeron Maranan
+							li Jon Gutierrez
+							li John Raven Andrin
+					div.col-md-6
+						h3 <span>J</span>unior <span>B</span>ridesmaids
+						ul
+							li Jezel Axalan
+							li Gayle Baybay
+							li Rhegie Axalan
+
+				div.row
+					div.col-md-6
+						div.row
+							div.col-md-12
+								h3 <span>B</span>ible <span>B</span>earer
+								ul
+									li Cian Ilag
+							div.col-md-12
+								h3 <span>R</span>ing <span>B</span>earer
+								ul
+									li Cameron Presto
+							div.col-md-12
+								h3 <span>C</span>oin <span>B</span>earer
+								ul
+									li Noah Presto
+					div.col-md-6
+						h3 <span>F</span>lower <span>G</span>irls
+						ul
+							li Ashely Maranan
+							li Jenelle
+							li Karmyn Jade Maranan
+							li Lulu Presto
+							li Malayah Presto
+							li Marla Nagutum
+							li Sarah Presto
+							li Senia Mendoza
+							li Yhen Yhen Pangan
+
+				div.row
+					div.col-md-6
+						h3 <span>L</span>ittle <span>G</span>room
+						ul
+							li Leo Carter Gutierrez
+					div.col-md-6
+						h3 <span>L</span>ittle <span>B</span>ride
+						ul
+							li Emily Adele Gutierrez
