Wedding - a 2nd version of the page

--- a/public/stylesheets/Source/styles.scss
+++ b/public/stylesheets/Source/styles.scss
@@ -233,5 +233,15 @@ a:hover, li.active a {
 	.content
 	{
 		margin-top: -$headerSpacing;
+
+		h1
+		{
+			font-size: 25px;
+		}
+
+		h1, h2, h3 
+		{
+			margin-bottom: 0;
+		}
 	}
 }
