--- a/public/stylesheets/Source/hjsayido.scss
+++ b/public/stylesheets/Source/hjsayido.scss
@@ -40,17 +40,12 @@ body
 	{
 		background-image: url('../images/together-mobile.jpg');
 	}
-	
-	h1 
-	{
-		font-size: 24px;
-	}
 
 	.instgram-container
 	{
 		text-align: center;
 
-		h2
+		h1, h2
 		{
 			font-size: 20px;
 		}
