--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -7097,4 +7097,8 @@ a:hover, li.active a {
     -moz-transform: scale(0.5); }
 
   .content {
-    margin-top: -20px; } }
+    margin-top: -20px; }
+    .content h1 {
+      font-size: 25px; }
+    .content h1, .content h2, .content h3 {
+      margin-bottom: 0; } }
